--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,7 @@
 /* html body */
 @layer base {
     body {
-        @apply bg-[#141414] text-white;
+        @apply bg-[#141414] text-white !scrollbar-track-transparent !scrollbar-thumb-white !scrollbar-thin;
     }
 
     header {
@@ -16,5 +16,9 @@
 @layer components {
     .headerLink {
         @apply cursor-pointer text-sm font-light text-[#e5e5e5] transition duration-[.4s] hover:text-[#b3b3b3];
+    }
+
+    .bannerButton{
+        @apply flex items-center gap-x-2 rounded-sm px-5 py-1.5 text-sm font-semibold transition hover:opacity-75 md:py-2.5 md:px-8 md:text-xl
     }
 }
