--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,4 +21,7 @@
     .bannerButton{
         @apply flex items-center gap-x-2 rounded-sm px-5 py-1.5 text-sm font-semibold transition hover:opacity-75 md:py-2.5 md:px-8 md:text-xl
     }
+    .input{
+        @apply w-full rounded-sm bg-[#333] px-5 py-3.5 placeholder-[gray] outline-none focus:bg-[#454545]; 
+    }
 }
